# uber-server

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app_init.py  config.py  locustfile.py  main.py  utils.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: epoch.py  location.py
app/schemas/: location.py  msg.py  time.py
app/tests/: conftest.py
app/tests/api/v1/: test_v1.py
